--- a/mysample.yml
+++ b/mysample.yml
@@ -8,6 +8,6 @@
       state: present
       
   - name: I want to start the apache2 services
-    services:
+    service:
        name: apache2
        state: started
