--- a/gathfact.yaml
+++ b/gathfact.yaml
@@ -13,3 +13,9 @@
       name: httpd
       state: present
     when: ansible_os_family== "Redhat"
+
+  - name: I want to start the httpd service
+    service:
+       name: httpd
+       state: started
+    when: ansible_os_family=="Redhat"
