--- a/filehandeling.yaml
+++ b/filehandeling.yaml
@@ -10,3 +10,9 @@
     template: 
           src: myindex.j2
           dest: /var/www/html/index.html
+
+  - name: Downloading internet files
+    get_url: 
+         src: https://get.jenkins.io/war-stable/2.361.4/jenkins.war
+         dest: /home/ubuntu
+         force_basic_auth: yes
