--- a/filehandeling.yaml
+++ b/filehandeling.yaml
@@ -13,6 +13,6 @@
 
   - name: Downloading internet files
     get_url: 
-         src: https://get.jenkins.io/war-stable/2.361.4/jenkins.war
+         url: https://get.jenkins.io/war-stable/2.361.4/jenkins.war
          dest: /home/ubuntu
          force_basic_auth: yes
