--- a/filehandeling.yaml
+++ b/filehandeling.yaml
@@ -10,9 +10,16 @@
     template: 
           src: myindex.j2
           dest: /var/www/html/index.html
+    notify: startapache
 
   - name: Downloading internet files
     get_url: 
          url: https://get.jenkins.io/war-stable/2.361.4/jenkins.war
          dest: /home/ubuntu
          force_basic_auth: yes
+
+  handlers: 
+  - name: startapache
+    service:
+         name: apache2
+         state: started
