--- a/myapacherole/tasks/download.yml
+++ b/myapacherole/tasks/download.yml
@@ -6,7 +6,7 @@
        force_basic_auth: yes
 
 - name: Creating the tomcat folder
-  files:
+  file:
      src: /opt/tomcat
      state: directory
 
