--- a/myapacherole/tasks/download.yml
+++ b/myapacherole/tasks/download.yml
@@ -7,7 +7,7 @@
 
 - name: Creating the tomcat folder
   file:
-     src: /opt/tomcat
+     path: /opt/tomcat
      state: directory
 
 - name: extract the tar files
