--- a/myapacherole/tasks/download.yml
+++ b/myapacherole/tasks/download.yml
@@ -1,8 +1,8 @@
 ---
 - name: download tomcat tar file
   get_url:
-       url: https://fossies.org/linux/www/apache-tomcat-10.1.2.tar.gz/
-       dest: sudo tar xzvf apache-tomcat-10*tar.gz -C /opt/tomcat --strip-components=1
+       url: https://fossies.org/linux/www/apache-tomcat-10.1.2.tar.gz
+       dest: /home/ubuntu/apache-tomcat-10.1.2.tar.gz
        force_basic_auth: yes
 
 - name: Creating the tomcat folder
@@ -12,5 +12,5 @@
 
 - name: extract the tar files
   command:
-       cmd: sudo tar xzvf apache-tomcat-10*tar.gz -C /opt/tomcat --strip-components=1
+       cmd: sudo tar xzvf /home/ubuntu/apache-tomcat-10.1.2.tar.gz -C /opt/tomcat --strip-components=1
        creates: /opt/tomcat/LICENSE
